# openmeters

./: BUILD_ALTERNATIVES.md  BUILD_FIX_SUMMARY.md  CMakeLists.txt  FINAL_BUILD_FIX.md  GITHUB_ACTIONS_GUIDE.md  PLATFORM_GUARDS.md  PLATFORM_GUARDS_VERIFICATION.md  TEST_PLAN.md  TEST_RESULTS.md  WORKFLOW_MIGRATION_GUIDE.md  build-simple.bat
.github/workflows/: build-and-test.yml  build-multiplatform-future.yml.example  build.yml
app/: main-gui.cpp  main.cpp
common/: logger.cpp
core/audio/: audio-engine.cpp  audio-engine.h  wasapi-capture.cpp  wasapi-capture.h
ui/: window.h
